<resources>
    <string name="app_name">SheredPreferencesDemo</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>

    <string name="hidden">Hidden</string>
    <string name="shown">Shown</string>
    <string name="show_dexter">Show Dexter</string>
    <string name="show_deedee">Show DeeDee</string>
    <string name="background_color">background color</string>

    <!--keys-->
    <string name="key_show_dexter" translatable="false">show_dexter</string>
    <string name="key_show_deedee" translatable="false">show_deedee</string>
    <string name="pref_color_key" translatable="false">color</string>

    <!--array keys-->
    <string name="pref_color_red_key" translatable="false">red</string>
    <string name="pref_color_blue_key" translatable="false">blue</string>
    <string name="pref_color_green_key" translatable="false">green</string>

    <!--array values-->
    <string name="pref_color_red_label">Red</string>
    <string name="pref_color_blue_label">Blue</string>
    <string name="pref_color_green_label">Green</string>

</resources>
