<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_show_dexter"
        android:summaryOff="@string/hidden"
        android:summaryOn="@string/shown"
        android:title="@string/show_dexter"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_show_deedee"
        android:summaryOff="@string/hidden"
        android:summaryOn="@string/shown"
        android:title="@string/show_deedee"/>


    <ListPreference
        android:defaultValue="@string/pref_color_red_key"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_keys"
        android:key="@string/pref_color_key"
        android:title="@string/background_color"/>

</PreferenceScreen>